<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_FAFAFA">

    <include layout="@layout/top_layout" />

    <Button
        android:id="@+id/TestBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Test"
        android:visibility="gone"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ScrollView
        android:id="@+id/welcomeSv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="@dimen/dp_40"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/topLayout">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingBottom="@dimen/dp_40">

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="@dimen/dp_40"
                android:layout_marginEnd="16dp"
                android:background="@drawable/item_bag_selector">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="26dp"
                    android:text="@string/test_work_number"
                    android:textColor="@color/color_222222"
                    android:textSize="34sp" />

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/testCodeEdt"
                    android:layout_width="match_parent"
                    android:layout_height="80dp"
                    android:layout_marginStart="@dimen/dp_20"
                    android:background="@null"
                    android:hint="@string/test_work_number_hint"
                    android:inputType="number"
                    android:maxLength="10"
                    android:minHeight="@dimen/dp_80"
                    android:textSize="34sp" />

            </androidx.appcompat.widget.LinearLayoutCompat>

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="@dimen/dp_40"
                android:layout_marginEnd="16dp"
                android:background="@drawable/item_bag_selector">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="26dp"
                    android:text="@string/cycle_index"
                    android:textColor="@color/color_222222"
                    android:textSize="34sp" />

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/numberEdt"
                    android:layout_width="match_parent"
                    android:layout_height="80dp"
                    android:layout_marginStart="@dimen/dp_20"
                    android:background="@null"
                    android:hint="@string/cycle_index_number"
                    android:inputType="number"
                    android:maxLength="6"
                    android:minHeight="@dimen/dp_80"
                    android:textSize="34sp" />

            </androidx.appcompat.widget.LinearLayoutCompat>

            <androidx.appcompat.widget.AppCompatCheckBox
                android:id="@+id/allBox"
                style="@style/CheckStyle"
                android:layout_marginStart="@dimen/dp_40"
                android:text="@string/all"
                android:textColor="@color/color_999999"
                android:textSize="34sp" />

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:background="@drawable/item_bag_selector"
                android:orientation="vertical"
                android:paddingStart="@dimen/dp_24"
                android:paddingEnd="@dimen/dp_24">

                <androidx.appcompat.widget.AppCompatCheckBox
                    android:id="@+id/mainCameraBox"
                    style="@style/CheckStyle"
                    android:text="@string/main_camera" />

                <TextView style="@style/line_style" />

                <androidx.appcompat.widget.AppCompatCheckBox
                    android:id="@+id/binocularColorBox"
                    style="@style/CheckStyle"
                    android:text="@string/binocular_color_camera" />

                <TextView style="@style/line_style" />

                <androidx.appcompat.widget.AppCompatCheckBox
                    android:id="@+id/binocularBlackBox"
                    style="@style/CheckStyle"
                    android:text="@string/binocular_black_camera" />

                <TextView style="@style/line_style" />

                <androidx.appcompat.widget.AppCompatCheckBox
                    android:id="@+id/qrCodeBox"
                    style="@style/CheckStyle"
                    android:text="@string/qr_code" />

                <TextView style="@style/line_style" />

                <androidx.appcompat.widget.AppCompatCheckBox
                    android:id="@+id/idCardBox"
                    style="@style/CheckStyle"
                    android:text="@string/id_card" />

                <androidx.appcompat.widget.AppCompatCheckBox
                    android:id="@+id/fingerprintsBox"
                    style="@style/CheckStyle"
                    android:text="@string/fingerprints" />

                <TextView style="@style/line_style" />

                <androidx.appcompat.widget.AppCompatCheckBox
                    android:id="@+id/icBox"
                    style="@style/CheckStyle"
                    android:text="@string/ic_card" />

            </androidx.appcompat.widget.LinearLayoutCompat>


            <TextView
                android:id="@+id/startTv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dp_16"
                android:layout_marginTop="@dimen/dp_50"
                android:layout_marginEnd="@dimen/dp_16"
                android:layout_marginBottom="@dimen/dp_40"
                android:background="@drawable/start_btn_selector"
                android:enabled="false"
                android:gravity="center"
                android:minHeight="@dimen/dp_80"
                android:text="@string/start"
                android:textColor="@color/white"
                android:textSize="34sp" />


        </androidx.appcompat.widget.LinearLayoutCompat>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>