<?xml version="1.0" encoding="utf-8"?>
<layout>

    <androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/uploadItemLl"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal"
        android:padding="@dimen/dp_5">

        <androidx.appcompat.widget.AppCompatCheckBox
            android:id="@+id/checkBox"
            style="@style/CheckStyle"
            android:layout_width="0dp"
            android:layout_marginLeft="@dimen/dp_20"
            android:layout_weight="0.8"
            android:checked="true"
            android:text="@string/all"
            android:textSize="@dimen/text_size_28" />

        <TextView
            android:id="@+id/testWorkTv"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dp_20"
            android:layout_marginRight="@dimen/dp_20"
            android:layout_weight="0.8"
            android:text="@string/test_work"
            android:textColor="@color/black"
            android:textSize="@dimen/text_size_28" />

        <TextView
            android:id="@+id/logNameTv"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1.5"
            android:text="@string/log_name"
            android:textColor="@color/black"
            android:textSize="@dimen/text_size_28" />

        <TextView
            android:id="@+id/operateTv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dp_10"
            android:layout_marginRight="@dimen/dp_10"
            android:text="@string/views_text"
            android:textColor="@color/color_e4"
            android:textSize="@dimen/text_size_28" />
    </androidx.appcompat.widget.LinearLayoutCompat>
</layout>