<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/loading"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:background="@drawable/dialog_bag_shape"
    android:minWidth="450dp"
    android:minHeight="210dp"
    android:orientation="vertical">

    <TextView
        android:id="@+id/titleTv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dp_25"
        android:layout_marginTop="@dimen/dp_30"
        android:textColor="@color/color_222222"
        android:textSize="@dimen/text_size_24" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/inputEdt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dp_25"
        android:layout_marginTop="@dimen/dp_8"
        android:layout_marginEnd="@dimen/dp_25"
        android:layout_marginBottom="40dp"
        android:background="@drawable/setting_edit_shape"
        android:minHeight="@dimen/dp_120"
        android:padding="@dimen/dp_10"
        android:textSize="@dimen/text_size_24" />

    <TextView
        android:id="@+id/restoreHintTv"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/whether_to_restore_factory_configuration"
        android:textColor="@color/color_222222"
        android:textSize="@dimen/text_size_24"
        android:visibility="gone" />

    <TextView
        style="@style/line_style"
        android:layout_marginStart="0dp"
        android:layout_marginEnd="0dp" />

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="@dimen/dp_88"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/cancelTv"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/cancel"
            android:textColor="@color/color_999999"
            android:textSize="@dimen/text_size_24" />

        <TextView
            style="@style/line_style"
            android:layout_width="0.5dp"
            android:layout_height="fill_parent" />

        <TextView
            android:id="@+id/enterTv"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/enter"
            android:textColor="@color/color_222222"
            android:textSize="@dimen/text_size_24" />
    </androidx.appcompat.widget.LinearLayoutCompat>


</LinearLayout>